--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
-:root {}
+:root {
+  --white: #ffffff;
+  --orange-100: #fff3eb;
+  --orange-300: #ff8b37;
+}
 
 html,
 body {
@@ -9,6 +13,11 @@ body {
 body {}
 
 * {
+  background: none repeat scroll 0 0 transparent;
+  border: medium none;
+  border-spacing: 0;
+  text-decoration: none;
+  text-indent: 0;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
