--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --black-100: #f5f5f7;
   --black-300: #d0d0d8;
+  --black-500: #1c1c21;
   --orange-100: #fff3eb;
   --orange-300: #ff8b37;
   --white: #ffffff;
