--- a/src/components/game.module.css
+++ b/src/components/game.module.css
@@ -1,14 +1,14 @@
 .l-game {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   height: 100vh;
   padding-bottom: 24px;
 }
 
 .question {
-  margin-top: 45%;
+  margin-bottom: 100px;
   padding: 0 16px;
   font-size: 18px;
   text-align: center;
@@ -19,10 +19,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 8px;
 }
 
 .answer-option-button {
-  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .l-hexagon-container {
@@ -106,7 +109,21 @@
   }
 }
 
-.answer {
-  position: relative;
-  bottom: 35px;
+.l-answer {
+  display: flex;
+  gap: 8px;
+  padding-left: 16px;
+  position: absolute;
+}
+
+.answer__option {
+  font-weight: 600;
+  font-size: 14px;
+  color: var(--orange-300);
+}
+
+.answer__text {
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--black-500);
 }
