--- a/src/components/prize-section.module.css
+++ b/src/components/prize-section.module.css
@@ -10,6 +10,7 @@
   height: 100vh;
   display: flex;
   justify-content: center;
+  align-items: center;
   position: fixed;
   top: 56px;
   right: -100%;
@@ -22,6 +23,23 @@
   transition: 450ms;
 }
 
+.prize-section__items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.l-question-prize {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
 .overlay {
   display: none;
   position: fixed;
@@ -29,7 +47,7 @@
   left: 0;
   width: calc(100vw - 320px);
   height: 100vh;
-  background-color: transparent;
+  background-color: var(--black-100);
   z-index: 10;
 }
 
