feat: prize section display on desktop

--- a/src/components/prize-section.module.css
+++ b/src/components/prize-section.module.css
@@ -54,3 +54,15 @@
 .overlay--active {
   display: block;
 }
+
+@media (min-width: 1200px) {
+  .prize-section {
+    background-color: var(--white);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    right: 0;
+    top: 0;
+  }
+}
