--- a/src/components/buttons/answer-option-button/answer-option-button.module.css
+++ b/src/components/buttons/answer-option-button/answer-option-button.module.css
@@ -7,7 +7,7 @@
 .l-hexagon {
   position: relative;
 }
-
+/* TODO: DRY hexagon styles */
 .hexagon {
   --height: 56px;
   height: var(--height);
@@ -157,6 +157,83 @@
     bottom: -1px;
     left: -1px;
     width: 41px;
+    height: 1px;
+    background-color: var(--black-300);
+  }
+}
+
+.hexagon-desktop {
+  --height: 40px;
+  height: var(--height);
+  width: 216px;
+  background-color: var(--white);
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border: 1px solid var(--black-300);
+}
+
+.hexagon-desktop__left,
+.hexagon-desktop__right {
+  --height: 40px;
+  --line-width: 18px;
+  width: 0;
+  position: absolute;
+  top: calc(var(--height) / 2 - var(--line-width));
+  border-top: var(--line-width) solid transparent;
+  border-bottom: var(--line-width) solid transparent;
+}
+
+.hexagon-desktop__left {
+  left: -15px;
+  border-right: var(--line-width) solid var(--black-300);
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    right: -1px;
+    width: 38px;
+    height: 1px;
+    background-color: var(--black-300);
+  }
+
+  &::after {
+    content: '';
+    width: 0;
+    height: 0;
+    border-top: 18px solid transparent;
+    border-bottom: 18px solid transparent;
+    border-right: 18px solid var(--white);
+    position: absolute;
+    top: -18px;
+    left: 2px;
+  }
+}
+
+.hexagon-desktop__right {
+  right: -15px;
+  border-left: var(--line-width) solid var(--black-300);
+
+  &::before {
+    content: '';
+    width: 0;
+    height: 0;
+    border-top: 18px solid transparent;
+    border-bottom: 18px solid transparent;
+    border-left: 18px solid var(--white);
+    position: absolute;
+    top: -18px;
+    right: 2px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: -1px;
+    width: 38px;
     height: 1px;
     background-color: var(--black-300);
   }
