--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,16 @@
 :root {
-  --black-100: #f5f5f7;
-  --black-300: #d0d0d8;
-  --black-500: #1c1c21;
-  --orange-100: #fff3eb;
-  --orange-300: #ff8b37;
-  --white: #ffffff;
+  --black-5: #f5f5f7;
+  --black-40: #d0d0d8;
+  --black-100: #1c1c21;
+  --green-5: #e6faea;
+  --green-100: #47d867;
+  --orange-5: #fff3eb;
+  --orange-80: #ffac70;
+  --orange-100: #ff8b37;
+  --orange-120: #e87928;
+  --red-5: #fdeeed;
+  --red-100: #ec6259;
+  --white-100: #ffffff;
 }
 
 html,
