feat: active button state of prize section

--- a/src/components/prize-section.module.css
+++ b/src/components/prize-section.module.css
@@ -40,6 +40,10 @@
   text-align: center;
 }
 
+.question-prize__title--active {
+  color: var(--orange-100);
+}
+
 .overlay {
   display: none;
   position: fixed;
