--- a/src/components/buttons/answer-option-button/answer-option-button.module.css
+++ b/src/components/buttons/answer-option-button/answer-option-button.module.css
@@ -138,6 +138,24 @@
   }
 }
 
+.hexagon--active {
+  border-color: var(--orange-100);
+}
+
+.hexagon__left--active {
+  border-right-color: var(--orange-100);
+  &::before {
+    background-color: var(--orange-100);
+  }
+}
+
+.hexagon__right--active {
+  border-left-color: var(--orange-100);
+  &::after {
+    background-color: var(--orange-100);
+  }
+}
+
 @media (min-width: 992px) {
   .hexagon {
     width: 319px;
