--- a/src/components/buttons/start-button/start-button.module.css
+++ b/src/components/buttons/start-button/start-button.module.css
@@ -5,8 +5,15 @@
   color: var(--white-100);
   background-color: var(--orange-100);
   border-radius: 8px;
-}
 
+  &:hover {
+    background-color: var(--orange-80);
+  }
+
+  &:active {
+    background-color: var(--orange-120);
+  }
+}
 
 @media (min-width: 992px) {
   .button {
